--- a/blogpost.html
+++ b/blogpost.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     <div id="container">
+        <header id="cabecera">
+            Cabecera
+        </header>
         <div id="post">
             <h1>Este es el título atractivo e interesante del post</h1>
             <p>Y este es el parrafo de inicio dónde vamos a
