--- a/blogpost.html
+++ b/blogpost.html
@@ -10,7 +10,12 @@
         <div id="post">
             <h1>Este es el título atractivo e interesante del post</h1>
             <p>Y este es el parrafo de inicio dónde vamos a
-             explicar las cosas increibles que se pueden hacer con ramas</p>
+             explicar las cosas increibles que se pueden hacer con ramas
+            </p>
+             <p>Los blogs son la mejor forma de compartir información y tus ideas.
+                mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estadísticamente 
+                no lo eres.... por ahora.
+             </p>
         </div>
     </div>
 </body>
