--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,7 @@
 <body>
     <div id="container">
         <header id="cabecera">
-            hyperblog <span id="tagline">Tu blog de confianza</span>
+            hyperblog <span id="tagline">Tu blog de cabecera</span>
         </header>
         <div id="post">
             <h1>Este es el título atractivo e interesante del post</h1>
