--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,7 @@
 <body>
     <div id="container">
         <header id="cabecera">
-            hyperblog <span id="tagline">Tu blog de confianza</span>
+            hyperblog <span id="tagline">Tu blog de maestro</span>
         </header>
         <div id="post">
             <h1>Este es el título atractivo e interesante del post</h1>
@@ -18,6 +18,9 @@
              <p>Los blogs son la mejor forma de compartir información y tus ideas.
                 mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estadísticamente 
                 no lo eres.... por ahora.
+             </p>
+             <p>
+                 Suscribete y dale like.
              </p>
         </div>
     </div>
