--- a/blogpost.html
+++ b/blogpost.html
@@ -8,6 +8,7 @@
 <body>
     <div id="container">
         <header id="cabecera">
+            <img id="logo" src="imagenes/dragon.png" alt="Logo del post">
             hyperblog <span id="tagline">Tu blog de cabecera</span>
         </header>
         <div id="post">
