--- a/blogpost.html
+++ b/blogpost.html
@@ -23,6 +23,9 @@
                  Suscribete y dale like.
              </p>
         </div>
+        <footer id="footer">
+            Hecho con amor en Platzi &lt;3
+        </footer>
     </div>
 </body>
 </html>
