--- a/blogpost.html
+++ b/blogpost.html
@@ -13,7 +13,7 @@
         </header>
         <div id="post">
             <h1>Este es el título atractivo e interesante del post</h1>
-            <p>Y este es el parrafo de inicio dónde vamos a
+            <p>Y este es el párrafo de inicio dónde vamos a
              explicar las cosas increibles que se pueden hacer con ramas
             </p>
              <p>Los blogs son la mejor forma de compartir información y tus ideas.
