--- a/blogpost.html
+++ b/blogpost.html
@@ -13,8 +13,8 @@
         </header>
         <div id="post">
             <h1>Este es el título atractivo e interesante del post</h1>
-            <p>Y este es el párrafo de inicio dónde vamos a
-             explicar las cosas increibles que se pueden hacer con ramas
+            <p>Y este es el p&aacute;rrafo de inicio dónde vamos a
+             explicar las cosas incre&iacute;bles que se pueden hacer con ramas
             </p>
              <p>Los blogs son la mejor forma de compartir información y tus ideas.
                 mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estadísticamente 
