--- a/blogpost.html
+++ b/blogpost.html
@@ -12,16 +12,16 @@
             hyperblog <span id="tagline">Tu blog de cabecera</span>
         </header>
         <div id="post">
-            <h1>Este es el título atractivo e interesante del post</h1>
+            <h1>Este es el t&iacute;tulo atractivo e interesante del post</h1>
             <p>Y este es el p&aacute;rrafo de inicio dónde vamos a
              explicar las cosas incre&iacute;bles que se pueden hacer con ramas
             </p>
-             <p>Los blogs son la mejor forma de compartir información y tus ideas.
-                mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estadísticamente 
+             <p>Los blogs son la mejor forma de compartir informaci&oacute;n y tus ideas.
+                mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estad&iacute;sticamente 
                 no lo eres.... por ahora.
              </p>
              <p>
-                 Suscribete y dale like.
+                 Suscr&iacute;bete y dale like.
              </p>
         </div>
         <footer id="footer">
