--- a/blogpost.html
+++ b/blogpost.html
@@ -16,6 +16,7 @@
             <p>Y este es el p&aacute;rrafo de inicio dónde vamos a
              explicar las cosas incre&iacute;bles que se pueden hacer con ramas
             </p>
+            <p><img src="imagenes/equipo.jpg" alt="" width="100%"></p>
              <p>Los blogs son la mejor forma de compartir informaci&oacute;n y tus ideas.
                 mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estad&iacute;sticamente 
                 no lo eres.... por ahora.
